2018-06-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Ditch gamma ramp.

	* src/ftstring.c (status): `gamma_ramp' removed.
	(gamma_ramp_draw): Remove.
	(event_gamma_change): Remove setting `gamma_ramp'.
	* src/ftstring.1: Mention stress test glyphs.

2018-06-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid, ftview, ftstring] Update font and encoding handling.

	* src/ftcommon.c (my_face_requester): Check `cmap_index' range.
	(FTDemo_Install_Font): `cmap_index' obeys `handle->encoding' here,
	and postpone setting `num_indices'.
	(FTDemo_Set_Current_Font): `handle->encoding' obeys `cmap_index' here,
	also set `num_indices' accordingly.

	* src/ftview.c (event_encoding_change): Simplify by calling
	`FTDemo_Set_Current_Font'.

2018-06-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Improve stress test glyphs.

	* src/ftstring.c (wheel_init): Integrate into...
	(flower_init): ...this function.
	(main): Improve appearance of stress test glyphs.

2018-06-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Display glyphs to stress test rendering.

	* src/ftstring.c (wheel_init, flower_init): New functions to
	initialize stress test glyphs.
	(main): Display them.

2018-06-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Draw dots using `FT_New_Glyph'.

	* src/ftgrid.c (circle_init): Make a custom glyph with a circle.
	(circle_draw): Render it using `FTDemo_Draw_Glyph_Color'.
	(ft_bitmap_draw, ft_outline_draw, ft_outline_new_circle): Removed.

2018-06-16  Werner Lemberg  <wl@gnu.org>

	[ftview] First shot at colored glyph layer support.

	This is basically a proof of concept.  Still missing: Switching off
	color layers and controlling palette selection.  Additionally, only
	`Render_All' handles color layers.

	Some code should be moved to `ftcommon' so that other demo programs
	can show colored glyph layers also.

	* src/ftview: Include FT_COLOR_H and FT_BITMAP_H.
	(Render_All): Handle colored glyph layers.
